[gd_scene load_steps=7 format=3 uid="uid://biagggwlwt20g"]

[ext_resource type="Script" path="res://fruit.gd" id="1_l0o7y"]
[ext_resource type="Texture2D" uid="uid://ckp122n4x7knc" path="res://sprites/ball 02.svg" id="2_72kqe"]
[ext_resource type="Script" path="res://explosion.gd" id="3_p7pj7"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_homer"]
friction = 0.5
rough = true
bounce = 0.02

[sub_resource type="CircleShape2D" id="CircleShape2D_1vo6q"]
resource_local_to_scene = true
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1xex8"]
resource_local_to_scene = true
radius = 64.7765

[node name="fruit" type="RigidBody2D"]
physics_material_override = SubResource("PhysicsMaterial_homer")
gravity_scale = 2.8
max_contacts_reported = 2
contact_monitor = true
script = ExtResource("1_l0o7y")

[node name="fruit_sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_72kqe")

[node name="fruit_collider" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_1vo6q")

[node name="Area2D" type="Area2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_p7pj7")

[node name="fruit_trigger" type="CollisionShape2D" parent="Area2D"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_1xex8")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="test" from="." to="Area2D" method="_on_fruit_test"]
